--- a/index.html
+++ b/index.html
@@ -251,6 +251,126 @@
             ["R", "T", "A", "A", "T", "F"],
             ["U", "O", "M", "Y", "E", "E"]
         ]
+    },{
+        wordsToFind: [
+            { word: "REPONSE", isSpangram: true },
+            { word: "INTERROGATION", isSpangram: false },
+            { word: "CHOIX", isSpangram: false },
+            { word: "QUESTION", isSpangram: false },
+            { word: "PROPOSITION", isSpangram: false },
+            { word: "LISTE", isSpangram: false },
+            { word: "OPTION", isSpangram: false }
+        ],
+        gridLetters: [
+            ["T","E","C","H","O","N"],
+            ["N","R","X","I","I","O"],
+            ["I","R","O","A","T","E"],
+            ["R","E","G","N","S","P"],
+            ["L","P","O","T","I","R"],
+            ["I","N","O","I","S","O"],
+            ["S","O","P","E","O","P"],
+            ["T","E","T","I","O","N"]
+        ]
+    },{
+        wordsToFind: [
+            { word: "PONCTUATION", isSpangram: true },
+            { word: "POINTS", isSpangram: false },
+            { word: "ESPACE", isSpangram: false },
+            { word: "CHAPITRE", isSpangram: false },
+            { word: "MOTS", isSpangram: false },
+            { word: "VIRGULE", isSpangram: false }
+        ],
+        gridLetters: [
+            ["I","V","N","C","E","S"],
+            ["R","O","N","I","T","P"],
+            ["G","P","T","O","U","A"],
+            ["U","S","P","A","E","C"],
+            ["L","E","T","C","H","A"],
+            ["S","E","I","T","I","P"],
+            ["A","R","O","R","E","T"],
+            ["H","P","N","M","O","S"]
+        ]
+    },{
+        wordsToFind: [
+            { word: "ANIMAUX", isSpangram: true },
+            { word: "PANTHERE", isSpangram: false },
+            { word: "LION", isSpangram: false },
+            { word: "OURS", isSpangram: false },
+            { word: "TIGRE", isSpangram: false },
+            { word: "CHAMEAU", isSpangram: false },
+            { word: "GAZELLE", isSpangram: false }
+        ],
+        gridLetters: [
+            ["A","M","E","T","N","A"],
+            ["H","E","R","H","U","P"],
+            ["C","A","E","A","R","X"],
+            ["A","U","I","M","A","U"],
+            ["L","N","T","A","G","E"],
+            ["I","O","I","J","Z","L"],
+            ["O","N","G","R","A","L"],
+            ["U","R","S","E","G","E"]
+        ]
+    },{
+        wordsToFind: [
+            { word: "MAGAZINE", isSpangram: true },
+            { word: "STARS", isSpangram: false },
+            { word: "VOGUE", isSpangram: false },
+            { word: "JOURNAL", isSpangram: false },
+            { word: "TITRE", isSpangram: false },
+            { word: "ABONNEMENT", isSpangram: false },
+            { word: "ARTICLES", isSpangram: false }
+        ],
+        gridLetters: [
+            ["A","R","L","A","N","R"],
+            ["T","I","C","E","O","U"],
+            ["E","N","L","S","J","E"],
+            ["T","E","I","Z","U","G"],
+            ["N","R","T","A","V","O"],
+            ["E","M","I","T","G","M"],
+            ["E","O","B","S","A","S"],
+            ["N","N","A","R","A","T"]
+        ]
+    },{
+        wordsToFind: [
+            { word: "GUACAMOLE", isSpangram: true },
+            { word: "POIVRON", isSpangram: false },
+            { word: "AVOCAT", isSpangram: false },
+            { word: "ECRASER", isSpangram: false },
+            { word: "TOMATE", isSpangram: false },
+            { word: "TORTILLA", isSpangram: false },
+            { word: "EPICE", isSpangram: false }
+        ],
+        gridLetters: [
+            ["P","E","T","O","R","T"],
+            ["O","V","L","L","L","I"],
+            ["I","R","O","A","C","E"],
+            ["E","O","A","M","I","P"],
+            ["C","N","A","C","E","E"],
+            ["R","A","C","T","A","T"],
+            ["R","S","O","U","T","A"],
+            ["E","A","V","G","O","M"]
+        ]
+    },{
+        wordsToFind: [
+            { word: "ARCENCIEL", isSpangram: true },
+            { word: "ROUGE", isSpangram: false },
+            { word: "VIOLET", isSpangram: false },
+            { word: "VERT", isSpangram: false },
+            { word: "JAUNE", isSpangram: false },
+            { word: "ORANGE", isSpangram: false },
+            { word: "MAGENTA", isSpangram: false },
+            { word: "INDIGO", isSpangram: false },
+        ],
+        gridLetters: [
+            ["U","E","I","O","T","T"],
+            ["O","G","V","L","E","R"],
+            ["R","C","E","N","C","E"],
+            ["A","R","N","E","I","V"],
+            ["J","U","I","N","D","E"],
+            ["A","O","T","N","I","L"],
+            ["A","R","A","E","G","O"],
+            ["N","G","E","G","A","M"]
+        ]
     }];
 
     let selectedCells = [];
