--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 </div>
 
 <script>
-    const grids = [{
+    const grids = [{ // Grille 1
         wordsToFind: [
             { word: "SOLAIRES", isSpangram: true },
             { word: "EQUINOXE", isSpangram: false },
@@ -211,7 +211,7 @@
             ["E", "E", "E", "Q", "N", "E"],
             ["R", "U", "U", "I", "O", "X"]
         ]
-    },{
+    },{ // Grille 2
         wordsToFind: [
             { word: "RAYONNANTE", isSpangram: true },
             { word: "LUMINEUX", isSpangram: false },
@@ -231,7 +231,7 @@
             ["R", "E", "L", "O", "N", "A"],
             ["L", "I", "E", "S", "L", "P"]
         ]
-    },{
+    },{ // Grille 3
         wordsToFind: [
             { word: "HAPPYBIRTHDAY", isSpangram: true },
             { word: "CONFETTIS", isSpangram: false },
@@ -251,7 +251,7 @@
             ["R", "T", "A", "A", "T", "F"],
             ["U", "O", "M", "Y", "E", "E"]
         ]
-    },{
+    },{ // Grille 4
         wordsToFind: [
             { word: "REPONSE", isSpangram: true },
             { word: "INTERROGATION", isSpangram: false },
@@ -271,9 +271,10 @@
             ["S","O","P","E","O","P"],
             ["T","E","T","I","O","N"]
         ]
-    },{
+    },{ // Grille 5
         wordsToFind: [
             { word: "PONCTUATION", isSpangram: true },
+            { word: "PHRASE", isSpangram: false },
             { word: "POINTS", isSpangram: false },
             { word: "ESPACE", isSpangram: false },
             { word: "CHAPITRE", isSpangram: false },
@@ -290,7 +291,7 @@
             ["A","R","O","R","E","T"],
             ["H","P","N","M","O","S"]
         ]
-    },{
+    },{ // Grille 6
         wordsToFind: [
             { word: "ANIMAUX", isSpangram: true },
             { word: "PANTHERE", isSpangram: false },
@@ -310,7 +311,7 @@
             ["O","N","G","R","A","L"],
             ["U","R","S","E","G","E"]
         ]
-    },{
+    },{ // Grille 7
         wordsToFind: [
             { word: "MAGAZINE", isSpangram: true },
             { word: "STARS", isSpangram: false },
@@ -330,7 +331,7 @@
             ["E","O","B","S","A","S"],
             ["N","N","A","R","A","T"]
         ]
-    },{
+    },{ // Grille 8
         wordsToFind: [
             { word: "GUACAMOLE", isSpangram: true },
             { word: "POIVRON", isSpangram: false },
@@ -350,7 +351,7 @@
             ["R","S","O","U","T","A"],
             ["E","A","V","G","O","M"]
         ]
-    },{
+    },{ // Grille 9
         wordsToFind: [
             { word: "ARCENCIEL", isSpangram: true },
             { word: "ROUGE", isSpangram: false },
