--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
             { word: "OURS", isSpangram: false },
             { word: "TIGRE", isSpangram: false },
             { word: "CHAMEAU", isSpangram: false },
-            { word: "GAZELLE", isSpangram: false }
+            { word: "GAZELLE", isSpangram: false },
+            { word: "JAGUAR", isSpangram: false }
         ],
         gridLetters: [
             ["A","M","E","T","N","A"],
