--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             { word: "QUESTION", isSpangram: false },
             { word: "PROPOSITION", isSpangram: false },
             { word: "LISTE", isSpangram: false },
-            { word: "OPTION", isSpangram: false }
+            { word: "OPTIONS", isSpangram: false }
         ],
         gridLetters: [
             ["T","E","C","H","O","N"],
@@ -268,8 +268,8 @@
             ["R","E","G","N","S","P"],
             ["L","P","O","T","I","R"],
             ["I","N","O","I","S","O"],
-            ["S","O","P","E","O","P"],
-            ["T","E","T","I","O","N"]
+            ["S","O","P","I","O","P"],
+            ["T","E","T","O","N","S"]
         ]
     },{ // Grille 5
         wordsToFind: [
