--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             ["L", "I", "E", "S", "L", "P"]
         ]
     },{ // Grille 3
-        theme: "Journée spéciale",
+        theme: "Une fois par an",
         wordsToFind: [
             { word: "HAPPYBIRTHDAY", isSpangram: true },
             { word: "CONFETTIS", isSpangram: false },
@@ -280,7 +280,7 @@
             ["T","E","T","O","N","S"]
         ]
     },{ // Grille 5
-        theme: "Structure",
+        theme: "« … »",
         wordsToFind: [
             { word: "PONCTUATION", isSpangram: true },
             { word: "PHRASE", isSpangram: false },
