--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             ["H","P","N","M","O","S"]
         ]
     },{ // Grille 6
-        theme: "Nature",
+        theme: "Africain à 4 pattes",
         wordsToFind: [
             { word: "ANIMAUX", isSpangram: true },
             { word: "PANTHERE", isSpangram: false },
