--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             background-color: #f7d358;
             color: white;
         }
+        .spangram.grid-10 {
+            background-color: #ff2a2a;
+            color: white;
+        }
         .line {
             position: absolute;
             width: 4px;
@@ -72,6 +76,9 @@
         }
         .spangram-line {
             background-color: #f7d358;
+        }
+        .spangram-line.grid-10 {
+            background-color: #ff2a2a;
         }
 
         .current-selection {
@@ -378,6 +385,26 @@
         ],
         gridLetters: [
             ["U","E","I","O","T","T"],
+            ["O","G","V","L","E","R"],
+            ["R","C","E","N","C","E"],
+            ["A","R","N","E","I","V"],
+            ["J","U","I","N","D","E"],
+            ["A","O","T","N","I","L"],
+            ["A","R","A","E","G","O"],
+            ["N","G","E","G","A","M"]
+        ]
+    },{ // Grille 10
+        theme: "Le soleil est revenu !",
+        wordsToFind: [
+            { word: "IMMENSEMERCI", isSpangram: true },
+            { word: "BRILLANT", isSpangram: false },
+            { word: "AIMER", isSpangram: false },
+            { word: "RIRE", isSpangram: false },
+            { word: "JOIE", isSpangram: false },
+            { word: "PLAISIR", isSpangram: false }
+        ],
+        gridLetters: [
+            ["R","I","L","A","T","T"],
             ["O","G","V","L","E","R"],
             ["R","C","E","N","C","E"],
             ["A","R","N","E","I","V"],
