--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
             background-color: #f7d358; /* Couleur pour le spangram (jaune) */
             color: white;
         }
+        .found-spangram.grid-10 {
+            background-color: #ff2a2a; /* Couleur pour le spangram (jaune) */
+            color: white;
+        }
         #counter {
             margin-top: 20px;
             font-size: 1.2em;
@@ -397,21 +401,22 @@
         theme: "Le soleil est revenu !",
         wordsToFind: [
             { word: "IMMENSEMERCI", isSpangram: true },
-            { word: "BRILLANT", isSpangram: false },
-            { word: "AIMER", isSpangram: false },
-            { word: "RIRE", isSpangram: false },
+            { word: "FAMILLE", isSpangram: false },
             { word: "JOIE", isSpangram: false },
-            { word: "PLAISIR", isSpangram: false }
+            { word: "RIRE", isSpangram: false },
+            { word: "BRILLANT", isSpangram: false },
+            { word: "MEILLEURS", isSpangram: false },
+            { word: "AIME", isSpangram: false }
         ],
         gridLetters: [
-            ["R","I","L","A","T","T"],
-            ["O","G","V","L","E","R"],
-            ["R","C","E","N","C","E"],
-            ["A","R","N","E","I","V"],
-            ["J","U","I","N","D","E"],
-            ["A","O","T","N","I","L"],
-            ["A","R","A","E","G","O"],
-            ["N","G","E","G","A","M"]
+            ["I", "M", "E", "L", "L", "M"],
+            ["A", "I", "E", "M", "I", "A"],
+            ["C", "M", "I", "S", "M", "F"],
+            ["R", "E", "L", "R", "E", "E"],
+            ["E", "I", "L", "U", "N", "I"],
+            ["B", "M", "E", "S", "J", "O"],
+            ["R", "I", "E", "T", "E", "R"],
+            ["L", "L", "A", "N", "R", "I"]
         ]
     }];
 
