--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
             setTimeout(() => wordLabel.classList.remove('success'), 1000);
             updateCounter();
 
-            if(wordObj.isSpangram) {
+            if(wordObj.isSpangram && currentGrid == 10) {
                 createLine(76.5,76.5,131.5,131.5, true);
             }
 
