--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     },{ // Grille 10
         theme: "Sunny",
         wordsToFind: [
-            { word: "IMMENSEMERCI", isSpangram: true },
+            { word: "MILLESMERCIS", isSpangram: true },
             { word: "FAMILLE", isSpangram: false },
             { word: "JOIE", isSpangram: false },
             { word: "RIRE", isSpangram: false },
@@ -410,12 +410,12 @@
         ],
         gridLetters: [
             ["I", "M", "E", "L", "L", "M"],
-            ["A", "I", "E", "M", "I", "A"],
-            ["C", "M", "I", "S", "M", "F"],
-            ["R", "E", "L", "R", "E", "E"],
-            ["E", "I", "L", "U", "N", "I"],
-            ["B", "M", "E", "S", "J", "O"],
-            ["R", "I", "E", "T", "E", "R"],
+            ["A", "S", "E", "I", "I", "A"],
+            ["I", "M", "M", "S", "L", "F"],
+            ["C", "E", "L", "R", "L", "E"],
+            ["R", "I", "L", "U", "E", "I"],
+            ["B", "E", "E", "S", "J", "O"],
+            ["R", "I", "M", "T", "E", "R"],
             ["L", "L", "A", "N", "R", "I"]
         ]
     }];
