maj grille 11 chacha

--- a/index.html
+++ b/index.html
@@ -418,6 +418,28 @@
             ["R", "I", "M", "T", "E", "R"],
             ["L", "L", "A", "N", "R", "I"]
         ]
+    },{ // Grille 11
+        theme: "A Fond la forme",
+        wordsToFind: [
+            { word: "ECHAUFFEMENT", isSpangram: true },
+            { word: "SPORTS", isSpangram: false },
+            { word: "FOOT", isSpangram: false },
+            { word: "COURSE", isSpangram: false },
+            { word: "BALLON", isSpangram: false },
+            { word: "WATERPOLO", isSpangram: false },
+            { word: "COURSE", isSpangram: false },
+            { word: "MATCH", isSpangram: false }
+        ],
+        gridLetters: [
+            ["O","C","E","O","L","O"],
+            ["U","S","F","F","P","R"],
+            ["R","U","O","W","E","E"],
+            ["A","O","T","A","T","M"],
+            ["H","P","F","R","T","E"],
+            ["S","C","O","B","N","S"],
+            ["T","C","E","T","A","L"],
+            ["A","M","H","N","O","L"]
+        ]
     }];
 
     let selectedCells = [];
