--- a/test.html
+++ b/test.html
@@ -439,7 +439,81 @@
             [{l:"T",w:7,i:3},{l:"C",w:7,i:4},{l:"E",w:1,i:1},{l:"T",w:1,i:12},{l:"A",w:5,i:2},{l:"L",w:5,i:3}],
             [{l:"A",w:7,i:2},{l:"M",w:7,i:1},{l:"H",w:7,i:5},{l:"N",w:5,i:6},{l:"O",w:5,i:5},{l:"L",w:5,i:4}]
         ]
+    },{ // Grille 12
+        theme: "Caïus Pupus",
+        // TRAVAUX
+        // ASTERIX
+        // MARATHON
+        // JAVELOT
+        // CUISINE
+        // MAISON
+        // OBELIX
+        gridLetters: [
+            [{l:"T",w:2,i:3},{l:"E",w:2,i:4},{l:"X",w:2,i:7},{l:"N",w:3,i:8},{l:"T",w:3,i:5},{l:"A",w:3,i:4}],
+            [{l:"S",w:2,i:2},{l:"R",w:2,i:5},{l:"I",w:2,i:6},{l:"O",w:3,i:7},{l:"H",w:3,i:6},{l:"R",w:3,i:3}],
+            [{l:"A",w:2,i:1},{l:"A",w:1,i:3},{l:"V",w:1,i:4},{l:"A",w:1,i:5},{l:"A",w:3,i:2},{l:"M",w:3,i:1}],
+            [{l:"R",w:1,i:2},{l:"L",w:4,i:5},{l:"O",w:4,i:6},{l:"N",w:6,i:6},{l:"U",w:1,i:6},{l:"X",w:1,i:7}],
+            [{l:"T",w:1,i:1},{l:"E",w:4,i:4},{l:"T",w:4,i:7},{l:"O",w:6,i:5},{l:"O",w:7,i:1},{l:"B",w:7,i:2}],
+            [{l:"V",w:4,i:3},{l:"N",w:5,i:6},{l:"E",w:5,i:7},{l:"S",w:6,i:4},{l:"I",w:6,i:3},{l:"E",w:7,i:3}],
+            [{l:"A",w:4,i:2},{l:"I",w:5,i:5},{l:"S",w:5,i:4},{l:"I",w:5,i:3},{l:"A",w:6,i:2},{l:"L",w:7,i:4}],
+            [{l:"J",w:4,i:1},{l:"C",w:5,i:1},{l:"U",w:5,i:2},{l:"M",w:6,i:1},{l:"X",w:7,i:6},{l:"I",w:7,i:5}]
+        ]
+    },{ // Grille 13
+        theme: "Porte bonheur",
+        // CHANCEUX
+        // HASARDE
+        // ALEATOIRE
+        // TREFLE
+        // LOTO
+        // FORTUNE
+        gridLetters: [
+            [{l:"E",w:4,i:3},{l:"R",w:4,i:2},{l:"T",w:4,i:1},{l:"C",w:1,i:1},{l:"O",w:5,i:2},{l:"T",w:5,i:3}],
+            [{l:"F",w:4,i:4},{l:"L",w:4,i:5},{l:"H",w:1,i:2},{l:"L",w:5,i:1},{l:"H",w:2,i:1},{l:"O",w:5,i:4}],
+            [{l:"E",w:4,i:6},{l:"N",w:6,i:6},{l:"E",w:6,i:7},{l:"A",w:1,i:3},{l:"A",w:2,i:2},{l:"S",w:2,i:3}],
+            [{l:"T",w:6,i:4},{l:"U",w:6,i:5},{l:"N",w:1,i:4},{l:"E",w:2,i:7},{l:"D",w:2,i:6},{l:"A",w:2,i:4}],
+            [{l:"R",w:6,i:3},{l:"O",w:6,i:2},{l:"F",w:6,i:1},{l:"C",w:1,i:5},{l:"E",w:3,i:9},{l:"R",w:2,i:5}],
+            [{l:"U",w:7,i:5},{l:"N",w:7,i:6},{l:"E",w:1,i:6},{l:"R",w:3,i:8},{l:"I",w:3,i:7},{l:"O",w:3,i:6}],
+            [{l:"T",w:7,i:4},{l:"R",w:7,i:3},{l:"E",w:7,i:7},{l:"U",w:1,i:7},{l:"T",w:3,i:5},{l:"A",w:3,i:4}],
+            [{l:"F",w:7,i:1},{l:"O",w:7,i:2},{l:"X",w:1,i:8},{l:"A",w:3,i:1},{l:"L",w:3,i:2},{l:"E",w:3,i:3}]
+        ]
+    },{ // Grille 14
+        theme: "Pixar",
+        // RATATOUILLE
+        // OIGNON
+        // AUBERGINE
+        // TOMATES
+        // COURGETTE
+        // POIVRE
+        gridLetters: [
+            [{l:"P",w:6,i:1},{l:"O",w:6,i:2},{l:"R",w:1,i:1},{l:"M",w:4,i:3},{l:"O",w:4,i:2},{l:"T",w:4,i:1}],
+            [{l:"I",w:6,i:3},{l:"V",w:6,i:4},{l:"N",w:2,i:6},{l:"A",w:1,i:2},{l:"A",w:4,i:4},{l:"T",w:4,i:5}],
+            [{l:"E",w:6,i:6},{l:"R",w:6,i:5},{l:"N",w:2,i:4},{l:"O",w:2,i:5},{l:"T",w:1,i:3},{l:"E",w:4,i:6}],
+            [{l:"I",w:2,i:2},{l:"G",w:2,i:3},{l:"T",w:5,i:8},{l:"T",w:5,i:7},{l:"A",w:1,i:4},{l:"S",w:4,i:7}],
+            [{l:"O",w:2,i:1},{l:"E",w:5,i:9},{l:"G",w:5,i:5},{l:"E",w:5,i:6},{l:"T",w:1,i:5},{l:"N",w:3,i:8}],
+            [{l:"U",w:5,i:3},{l:"R",w:5,i:4},{l:"E",w:1,i:11},{l:"O",w:1,i:6},{l:"E",w:3,i:9},{l:"I",w:3,i:7}],
+            [{l:"O",w:5,i:2},{l:"L",w:1,i:10},{l:"I",w:1,i:8},{l:"U",w:1,i:7},{l:"R",w:3,i:5},{l:"G",w:3,i:6}],
+            [{l:"C",w:5,i:1},{l:"L",w:1,i:9},{l:"A",w:3,i:1},{l:"U",w:3,i:2},{l:"B",w:3,i:3},{l:"E",w:3,i:4}]
+        ]
     }];
+    // Mise en surbrillance d'une cellule : \{l:"[A-Z]",w:\d,i:\d+\}
+    // },{ // Grille xx
+    //     theme: "A renseigner",
+    //     // MOT1
+    //     // MOT2
+    //     // MOT3
+    //     // MOT4
+    //     // MOT5
+    //     // MOT6
+    //     gridLetters: [
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
+    //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}]
+    //     ]
 
     let selectedCells = [];
     let selectedGrid = grids[0];
