--- a/test.html
+++ b/test.html
@@ -459,22 +459,23 @@
             [{l:"J",w:4,i:1},{l:"C",w:5,i:1},{l:"U",w:5,i:2},{l:"M",w:6,i:1},{l:"X",w:7,i:6},{l:"I",w:7,i:5}]
         ]
     },{ // Grille 13
-        theme: "Porte bonheur",
+        theme: "🍀",
         // CHANCEUX
-        // HASARDE
+        // BOHNEUR
         // ALEATOIRE
         // TREFLE
         // LOTO
         // FORTUNE
+        // HEUREUX
         gridLetters: [
             [{l:"E",w:4,i:3},{l:"R",w:4,i:2},{l:"T",w:4,i:1},{l:"C",w:1,i:1},{l:"O",w:5,i:2},{l:"T",w:5,i:3}],
-            [{l:"F",w:4,i:4},{l:"L",w:4,i:5},{l:"H",w:1,i:2},{l:"L",w:5,i:1},{l:"H",w:2,i:1},{l:"O",w:5,i:4}],
-            [{l:"E",w:4,i:6},{l:"N",w:6,i:6},{l:"E",w:6,i:7},{l:"A",w:1,i:3},{l:"A",w:2,i:2},{l:"S",w:2,i:3}],
-            [{l:"T",w:6,i:4},{l:"U",w:6,i:5},{l:"N",w:1,i:4},{l:"E",w:2,i:7},{l:"D",w:2,i:6},{l:"A",w:2,i:4}],
-            [{l:"R",w:6,i:3},{l:"O",w:6,i:2},{l:"F",w:6,i:1},{l:"C",w:1,i:5},{l:"E",w:3,i:9},{l:"R",w:2,i:5}],
-            [{l:"U",w:7,i:5},{l:"N",w:7,i:6},{l:"E",w:1,i:6},{l:"R",w:3,i:8},{l:"I",w:3,i:7},{l:"O",w:3,i:6}],
-            [{l:"T",w:7,i:4},{l:"R",w:7,i:3},{l:"E",w:7,i:7},{l:"U",w:1,i:7},{l:"T",w:3,i:5},{l:"A",w:3,i:4}],
-            [{l:"F",w:7,i:1},{l:"O",w:7,i:2},{l:"X",w:1,i:8},{l:"A",w:3,i:1},{l:"L",w:3,i:2},{l:"E",w:3,i:3}]
+            [{l:"F",w:4,i:4},{l:"L",w:4,i:5},{l:"H",w:1,i:2},{l:"L",w:5,i:1},{l:"B",w:2,i:1},{l:"O",w:5,i:4}],
+            [{l:"E",w:4,i:6},{l:"N",w:6,i:6},{l:"E",w:6,i:7},{l:"A",w:1,i:3},{l:"O",w:2,i:2},{l:"N",w:2,i:3}],
+            [{l:"T",w:6,i:4},{l:"U",w:6,i:5},{l:"N",w:1,i:4},{l:"R",w:2,i:7},{l:"U",w:2,i:6},{l:"H",w:2,i:4}],
+            [{l:"R",w:6,i:3},{l:"O",w:6,i:2},{l:"F",w:6,i:1},{l:"C",w:1,i:5},{l:"E",w:3,i:9},{l:"E",w:2,i:5}],
+            [{l:"U",w:7,i:6},{l:"E",w:7,i:5},{l:"E",w:1,i:6},{l:"R",w:3,i:8},{l:"I",w:3,i:7},{l:"O",w:3,i:6}],
+            [{l:"X",w:7,i:7},{l:"U",w:7,i:3},{l:"R",w:7,i:4},{l:"U",w:1,i:7},{l:"T",w:3,i:5},{l:"A",w:3,i:4}],
+            [{l:"H",w:7,i:1},{l:"E",w:7,i:2},{l:"X",w:1,i:8},{l:"A",w:3,i:1},{l:"L",w:3,i:2},{l:"E",w:3,i:3}]
         ]
     },{ // Grille 14
         theme: "Pixar",
