--- a/test.html
+++ b/test.html
@@ -530,6 +530,26 @@
             [{l:"O",w:5,i:2},{l:"L",w:1,i:10},{l:"I",w:1,i:8},{l:"U",w:1,i:7},{l:"R",w:3,i:5},{l:"G",w:3,i:6}],
             [{l:"C",w:5,i:1},{l:"L",w:1,i:9},{l:"A",w:3,i:1},{l:"U",w:3,i:2},{l:"B",w:3,i:3},{l:"E",w:3,i:4}]
         ]
+    },{ // Grille xx
+        theme: "E. D.",
+        // 1 LINETTE
+        // 2 PANDA
+        // 3 BENIN
+        // 4 TORTUE
+        // 5 PUZZLE
+        // 6 SAROUEL
+        // 7 SOURIRE
+        // 8 DOUCE
+        gridLetters: [
+            [{l:"P",w:5,i:1},{l:"Z",w:5,i:3},{l:"D",w:8,i:1},{l:"O",w:8,i:2},{l:"U",w:8,i:3},{l:"C",w:8,i:4}],
+            [{l:"U",w:5,i:2},{l:"E",w:4,i:6},{l:"Z",w:5,i:4},{l:"L",w:5,i:5},{l:"N",w:3,i:5},{l:"E",w:8,i:5}],
+            [{l:"U",w:4,i:5},{l:"O",w:4,i:2},{l:"T",w:4,i:1},{l:"E",w:5,i:6},{l:"I",w:3,i:4},{l:"B",w:3,i:1}],
+            [{l:"T",w:4,i:4},{l:"R",w:4,i:3},{l:"N",w:1,i:3},{l:"E",w:1,i:4},{l:"N",w:3,i:3},{l:"E",w:3,i:2}],
+            [{l:"L",w:1,i:1},{l:"I",w:1,i:2},{l:"S",w:6,i:1},{l:"A",w:6,i:2},{l:"T",w:1,i:5},{l:"T",w:1,i:6}],
+            [{l:"R",w:7,i:4},{l:"I",w:7,i:5},{l:"R",w:7,i:6},{l:"R",w:6,i:3},{l:"A",w:2,i:5},{l:"E",w:1,i:7}],
+            [{l:"U",w:7,i:3},{l:"O",w:7,i:2},{l:"E",w:7,i:7},{l:"O",w:6,i:4},{l:"D",w:2,i:4},{l:"P",w:2,i:1}],
+            [{l:"S",w:7,i:1},{l:"L",w:6,i:7},{l:"E",w:6,i:6},{l:"U",w:6,i:5},{l:"N",w:2,i:3},{l:"A",w:2,i:2}]
+        ]
     }];
     // Mise en surbrillance d'une cellule : \{l:"[A-Z]",w:\d,i:\d+\}
     // },{ // Grille xx
