--- a/test.html
+++ b/test.html
@@ -589,7 +589,7 @@
 
             const gridPreview = document.createElement('div');
             gridPreview.classList.add('grid-preview');
-            gridPreview.textContent = index + 1; // Affiche le numéro de la grille
+            gridPreview.textContent = (index + 1) + '/' + grids.length; // Affiche le numéro de la grille
 
             const gridTheme = document.createElement('div');
             gridTheme.classList.add('grid-theme');
