--- a/test.html
+++ b/test.html
@@ -20,6 +20,7 @@
             display: grid;
             grid-template-columns: auto auto auto;
             gap: 0.5em;
+            align-items:center;
         }
         #theme {
             background-color: #d9edf7;
