Ajout grille rougeur

--- a/test.html
+++ b/test.html
@@ -535,7 +535,7 @@
             [{l:"O",w:5,i:2},{l:"L",w:1,i:10},{l:"I",w:1,i:8},{l:"U",w:1,i:7},{l:"R",w:3,i:5},{l:"G",w:3,i:6}],
             [{l:"C",w:5,i:1},{l:"L",w:1,i:9},{l:"A",w:3,i:1},{l:"U",w:3,i:2},{l:"B",w:3,i:3},{l:"E",w:3,i:4}]
         ]
-    },{ // Grille xx
+    },{ // Grille 15
         theme: "E. D.",
         // 1 LINETTE
         // 2 PANDA
@@ -555,6 +555,24 @@
             [{l:"U",w:7,i:3},{l:"O",w:7,i:2},{l:"E",w:7,i:7},{l:"O",w:6,i:4},{l:"D",w:2,i:4},{l:"P",w:2,i:1}],
             [{l:"S",w:7,i:1},{l:"L",w:6,i:7},{l:"E",w:6,i:6},{l:"U",w:6,i:5},{l:"N",w:2,i:3},{l:"A",w:2,i:2}]
         ]
+    },{ // Grille 16
+        theme: "Tout ronger",
+        // 1 RONGEUR 7 OK
+        // 2 PORCEPIC 8
+        // 3 CHINCHILLA 10 OK
+        // 4 ECUREUIL 8
+        // 5 RATMUSQUE 9 OK
+        // 6 SOURIS 6 OK
+        gridLetters: [
+            [{l:"S",w:5,i:6},{l:"Q",w:5,i:7},{l:"U",w:5,i: 8},{l:"E",w:5,i:9},{l:"H",w:3,i:2},{l:"C",w:3,i:1}],
+            [{l:"T",w:5,i:3},{l:"U",w:5,i:5},{l:"A",w:3,i:10},{l:"L",w:3,i:9},{l:"N",w:3,i:4},{l:"I",w:3,i:3}],
+            [{l:"A",w:5,i:2},{l:"M",w:5,i:4},{l:"G",w:1,i: 4},{l:"L",w:3,i:8},{l:"H",w:3,i:6},{l:"C",w:3,i:5}],
+            [{l:"R",w:5,i:1},{l:"E",w:1,i:5},{l:"P",w:2,i:6},{l:"N",w:1,i:3},{l:"I",w:3,i:7},{l:"R",w:1,i:1}],
+            [{l:"R",w:1,i:7},{l:"U",w:1,i:6},{l:"E",w:2,i:5},{l:"I",w:2,i:7},{l:"O",w:1,i:2},{l:"S",w:6,i:1}],
+            [{l:"P",w:2,i:1},{l:"O",w:2,i:2},{l:"C",w:2,i:4},{l:"C",w:2,i:8},{l:"O",w:6,i:2},{l:"U",w:6,i:3}],
+            [{l:"L",w:4,i:8},{l:"R",w:2,i:3},{l:"E",w:4,i:5},{l:"U",w:4,i:3},{l:"R",w:6,i:4},{l:"I",w:6,i:5}],
+            [{l:"I",w:4,i:7},{l:"U",w:4,i:6},{l:"R",w:4,i:4},{l:"C",w:4,i:2},{l:"E",w:4,i:1},{l:"S",w:6,i:6}]
+        ]
     }];
     // Mise en surbrillance d'une cellule : \{l:"[A-Z]",w:\d,i:\d+\}
     // },{ // Grille xx
@@ -565,7 +583,6 @@
     //     // MOT4
     //     // MOT5
     //     // MOT6
-    //     gridLetters: [
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
@@ -574,6 +591,7 @@
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}]
+    //     gridLetters: [
     //     ]
 
     let selectedCells = [];
