--- a/test.html
+++ b/test.html
@@ -573,6 +573,44 @@
             [{l:"L",w:4,i:8},{l:"R",w:2,i:3},{l:"E",w:4,i:5},{l:"U",w:4,i:3},{l:"R",w:6,i:4},{l:"I",w:6,i:5}],
             [{l:"I",w:4,i:7},{l:"U",w:4,i:6},{l:"R",w:4,i:4},{l:"C",w:4,i:2},{l:"E",w:4,i:1},{l:"S",w:6,i:6}]
         ]
+    },{ // Grille 17
+        theme: "J'ai la musique en moi",
+        // 1 LIEUCONCERT 11 OK
+        // 2 FESTIVAL 8 OK
+        // 3 STADES 6 OK
+        // 4 DISCOTHEQUE 11
+        // 5 THEATRE 7 OK
+        // 6 OPERA 5 OK
+        gridLetters: [
+            [{l:"L",w:2,i:8},{l:"A",w:2,i:7},{l:"T",w:5,i:1},{l:"H",w:5,i:2},{l:"T",w:5,i:5},{l:"R",w:5,i:6}],
+            [{l:"I",w:2,i:5},{l:"V",w:2,i:6},{l:"F",w:2,i:1},{l:"E",w:5,i:3},{l:"A",w:5,i:4},{l:"E",w:5,i:7}],
+            [{l:"T",w:2,i:4},{l:"S",w:2,i:3},{l:"E",w:2,i:2},{l:"E",w:1,i:9},{l:"R",w:1,i:10},{l:"T",w:1,i:11}],
+            [{l:"L",w:1,i:1},{l:"I",w:1,i:2},{l:"E",w:1,i:3},{l:"C",w:1,i:8},{l:"E",w:6,i:3},{l:"P",w:6,i:2}],
+            [{l:"S",w:6,i:1},{l:"T",w:6,i:2},{l:"U",w:1,i:4},{l:"N",w:1,i:7},{l:"R",w:6,i:4},{l:"O",w:6,i:1}],
+            [{l:"D",w:6,i:3},{l:"A",w:6,i:4},{l:"C",w:1,i:5},{l:"O",w:1,i:6},{l:"D",w:4,i:1},{l:"A",w:6,i:5}],
+            [{l:"E",w:6,i:5},{l:"E",w:4,i:11},{l:"Q",w:4,i:9},{l:"H",w:4,i:7},{l:"C",w:4,i:4},{l:"I",w:4,i:2}],
+            [{l:"S",w:6,i:6},{l:"U",w:4,i:10},{l:"E",w:4,i:8},{l:"T",w:4,i:6},{l:"O",w:4,i:5},{l:"S",w:4,i:3}]
+        ]
+    },{ // Grille 18
+        theme: "Sens des mots",
+        // 1 POESIE 6 OK
+        // 2 SYNTAXE 7 OK
+        // 3 VERS 4 OK
+        // 4 RIME 4 OK
+        // 5 DICTION 7 OK
+        // 6 STROPHE 7
+        // 7 HAIKU 5 OK
+        // 8 SCANSION 8 OK
+        gridLetters: [
+            [{l:"N",w:8,i:4},{l:"I",w:8,i:6},{l:"O",w:8,i:7},{l:"N",w:8,i:8},{l:"N",w:5,i:7},{l:"O",w:5,i:6}],
+            [{l:"A",w:8,i:3},{l:"S",w:8,i:5},{l:"A",w:7,i:2},{l:"H",w:7,i:1},{l:"U",w:7,i:5},{l:"I",w:5,i:5}],
+            [{l:"C",w:8,i:2},{l:"S",w:8,i:1},{l:"I",w:7,i:3},{l:"K",w:7,i:4},{l:"C",w:5,i:3},{l:"T",w:5,i:4}],
+            [{l:"P",w:1,i:1},{l:"O",w:1,i:2},{l:"D",w:5,i:1},{l:"I",w:5,i:2},{l:"I",w:1,i:5},{l:"E",w:1,i:6}],
+            [{l:"R",w:3,i:3},{l:"S",w:3,i:4},{l:"E",w:1,i:3},{l:"S",w:1,i:4},{l:"S",w:6,i:1},{l:"E",w:6,i:7}],
+            [{l:"E",w:3,i:2},{l:"R",w:4,i:1},{l:"S",w:2,i:1},{l:"N",w:2,i:3},{l:"T",w:6,i:2},{l:"H",w:6,i:6}],
+            [{l:"V",w:3,i:1},{l:"I",w:4,i:2},{l:"Y",w:2,i:2},{l:"T",w:2,i:4},{l:"R",w:6,i:3},{l:"P",w:6,i:5}],
+            [{l:"E",w:4,i:4},{l:"M",w:4,i:3},{l:"A",w:2,i:5},{l:"X",w:2,i:6},{l:"E",w:2,i:7},{l:"O",w:6,i:4}]
+        ]
     }];
     // Mise en surbrillance d'une cellule : \{l:"[A-Z]",w:\d,i:\d+\}
     // },{ // Grille xx
@@ -583,6 +621,7 @@
     //     // MOT4
     //     // MOT5
     //     // MOT6
+    //     gridLetters: [
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
@@ -591,7 +630,6 @@
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}],
     //         [{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:},{l:"",w:,i:}]
-    //     gridLetters: [
     //     ]
 
     let selectedCells = [];
